<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">L003UsingService</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_service">Start_Service</string>
    <string name="stop_service">Stop_Service</string>
    <string name="bind_service">Bind_Service</string>
    <string name="unbind_service">Unbind_Service</string>
    <string name="getcurrentnum">getCurrentNum</string>

</resources>
