<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_service" />

    <Button
        android:id="@+id/btnBindService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_service" />

    <Button
        android:id="@+id/btnUnBindService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unbind_service" />

    <Button
        android:id="@+id/btnGetCurrentNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getcurrentnum" />

</LinearLayout>
